Feat/social media (#7)
* feat:integrate auth middleware

* feat:integrate middleware

* fix:swaggo auth

* feat:create api user login and register

* feat:integrate auth middleware

* feat:integrate middleware

* fix:swaggo auth

* feat:update auth model for jwt

* feat:added update and delete user

* feat:added social media route

* feat:fix modelling

* feat:integrate update and delete social media
